# pi-pico-misc

./: CMakeLists.txt
cnc-touch-probe/: CMakeLists.txt  cnc-touch-probe.cpp
fire/: CMakeLists.txt  fire.cpp
smilter/: CMakeLists.txt  smilter.cpp
